--- a/public/modal/policy-modal.html
+++ b/public/modal/policy-modal.html
@@ -1,6 +1,6 @@
 
 <div class="modal-win modal-win--policy">
-	<div class="modal-win__inner">
+	<div class="modal-win__inner custom-scroll">
 		<h4 class="text-center">Политика обработки персональных данных в МГУУ Правительства Москвы</h4>
 		<h5 class="text-center">1. Общие положения</h5>
 		<p>1.1. Политика обработки персональных данных в МГУУ Правительства Москвы (далее – Политика) разработана в соответствии с требованиями Федерального закона от 27 июля 2006 г. № 152-ФЗ «О персональных данных» в целях обеспечения защиты прав и свобод человека  и гражданина при обработке его персональных данных, в том числе защиты прав на неприкосновенность частной жизни, личную  и семейную тайну.</p>
