--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,8 @@
 								</div>
 								<!-- +e.input-wrap-->
 								<div class="form-wrap__input-wrap form-group">
-									<label><span class="form-wrap__input-title">ОИВ<img src="img/star.svg" alt=""/></span><input class="form-wrap__input form-control" inputmode="text" name="text" type="text" placeholder="ОИВ" required="required"/>
+									<label><span class="form-wrap__input-title">ОИВ<img src="img/star.svg" alt=""/></span><input class="form-wrap__input form-control is-invalid" inputmode="text" name="text" type="text" placeholder="ОИВ" required="required"/>
+										<div class="invalid-feedback">Мы собираем телефонные</div>
 									</label>
 								</div>
 								<!-- +e.input-wrap-->
