--- a/public/index.html
+++ b/public/index.html
@@ -38,12 +38,12 @@
 							<form>
 								<div class="form-wrap__title">Заполните и&nbsp;отправьте заявку
 								</div>
-								<div class="form-wrap__input-wrap form-group">
+								<div class="form-wrap__input-wrap form-group is-valid" required="required">
 									<label><span class="form-wrap__input-title">ФИО<img src="img/star.svg" alt=""/></span><input class="form-wrap__input form-control is-valid" inputmode="text" name="text" type="text" placeholder="Фамилия Имя Отчество" required="required"/>
 									</label>
 								</div>
 								<!-- +e.input-wrap-->
-								<div class="form-wrap__input-wrap form-group">
+								<div class="form-wrap__input-wrap form-group is-invalid" required="required">
 									<label><span class="form-wrap__input-title">ОИВ<img src="img/star.svg" alt=""/></span><input class="form-wrap__input form-control is-invalid" inputmode="text" name="text" type="text" placeholder="ОИВ" required="required"/>
 										<div class="invalid-feedback">Мы собираем телефонные</div>
 									</label>
@@ -54,17 +54,17 @@
 									</label>
 								</div>
 								<!-- +e.input-wrap-->
-								<div class="form-wrap__input-wrap form-group">
+								<div class="form-wrap__input-wrap form-group" required="required">
 									<label><span class="form-wrap__input-title">Занимаемая должность<img src="img/star.svg" alt=""/></span><input class="form-wrap__input form-control" inputmode="text" name="text" type="text" placeholder="Должность" required="required"/>
 									</label>
 								</div>
 								<!-- +e.input-wrap-->
-								<div class="form-wrap__input-wrap form-group">
+								<div class="form-wrap__input-wrap form-group" required="required">
 									<label><span class="form-wrap__input-title">Электронная почта<img src="img/star.svg" alt=""/></span><input class="form-wrap__input form-control" inputmode="email" name="email" type="email" placeholder="Служебная почта" required="required"/>
 									</label>
 								</div>
 								<!-- +e.input-wrap-->
-								<div class="form-wrap__input-wrap form-group">
+								<div class="form-wrap__input-wrap form-group is-invalid" required="required">
 									<label><span class="form-wrap__input-title">Номер телефона<img src="img/star.svg" alt=""/></span><input class="form-wrap__input form-control is-invalid" inputmode="tel" name="tel" type="tel" placeholder="+7 (___) ___–__–__" required="required"/>
 										<div class="invalid-feedback">Мы собираем телефонные номера для оперативной связи с вами по организационным и техническим вопросам.</div>
 									</label>
