--- a/public/modal/policy-modal.html
+++ b/public/modal/policy-modal.html
@@ -1,21 +1,23 @@
 
 <div class="modal-win modal-win--policy">
-	<div class="modal-win__inner custom-scroll">
-		<h4 class="text-center">Политика обработки персональных данных в МГУУ Правительства Москвы</h4>
-		<h5 class="text-center">1. Общие положения</h5>
-		<p>1.1. Политика обработки персональных данных в МГУУ Правительства Москвы (далее – Политика) разработана в соответствии с требованиями Федерального закона от 27 июля 2006 г. № 152-ФЗ «О персональных данных» в целях обеспечения защиты прав и свобод человека  и гражданина при обработке его персональных данных, в том числе защиты прав на неприкосновенность частной жизни, личную  и семейную тайну.</p>
-		<p>1.2. Политика действует в отношении всех персональных данных, которые МГУУ Правительства Москвы (далее – Университет) обрабатывает  как оператор.</p>
-		<p>1.3. Политика распространяется на отношения в области обработки персональных данных возникшие как до, так и после утверждения настоящей Политики.</p>
-		<p>1.4. Требования Политики распространяются на деятельность Университета в целом, обязательны для руководителей и работников структурных подразделений, участвующих в процессе обработки  и защиты персональных данных, а также для контрагентов – физических  и юридических лиц </p>
-		<h5 class="text-center">1. Общие положения</h5>
-		<p>1.1. Политика обработки персональных данных в МГУУ Правительства Москвы (далее – Политика) разработана в соответствии с требованиями Федерального закона от 27 июля 2006 г. № 152-ФЗ «О персональных данных» в целях обеспечения защиты прав и свобод человека  и гражданина при обработке его персональных данных, в том числе защиты прав на неприкосновенность частной жизни, личную  и семейную тайну.</p>
-		<p>1.2. Политика действует в отношении всех персональных данных, которые МГУУ Правительства Москвы (далее – Университет) обрабатывает  как оператор.</p>
-		<p>1.3. Политика распространяется на отношения в области обработки персональных данных возникшие как до, так и после утверждения настоящей Политики.</p>
-		<p>1.4. Требования Политики распространяются на деятельность Университета в целом, обязательны для руководителей и работников структурных подразделений, участвующих в процессе обработки  и защиты персональных данных, а также для контрагентов – физических  и юридических лиц </p>
-		<h5 class="text-center">1. Общие положения</h5>
-		<p>1.1. Политика обработки персональных данных в МГУУ Правительства Москвы (далее – Политика) разработана в соответствии с требованиями Федерального закона от 27 июля 2006 г. № 152-ФЗ «О персональных данных» в целях обеспечения защиты прав и свобод человека  и гражданина при обработке его персональных данных, в том числе защиты прав на неприкосновенность частной жизни, личную  и семейную тайну.</p>
-		<p>1.2. Политика действует в отношении всех персональных данных, которые МГУУ Правительства Москвы (далее – Университет) обрабатывает  как оператор.</p>
-		<p>1.3. Политика распространяется на отношения в области обработки персональных данных возникшие как до, так и после утверждения настоящей Политики.</p>
-		<p>1.4. Требования Политики распространяются на деятельность Университета в целом, обязательны для руководителей и работников структурных подразделений, участвующих в процессе обработки  и защиты персональных данных, а также для контрагентов – физических  и юридических лиц </p>
+	<div class="custom-scroll">
+		<div class="modal-win__inner">
+			<h4 class="text-center">Политика обработки персональных данных в МГУУ Правительства Москвы</h4>
+			<h5 class="text-center">1. Общие положения</h5>
+			<p>1.1. Политика обработки персональных данных в МГУУ Правительства Москвы (далее – Политика) разработана в соответствии с требованиями Федерального закона от 27 июля 2006 г. № 152-ФЗ «О персональных данных» в целях обеспечения защиты прав и свобод человека  и гражданина при обработке его персональных данных, в том числе защиты прав на неприкосновенность частной жизни, личную  и семейную тайну.</p>
+			<p>1.2. Политика действует в отношении всех персональных данных, которые МГУУ Правительства Москвы (далее – Университет) обрабатывает  как оператор.</p>
+			<p>1.3. Политика распространяется на отношения в области обработки персональных данных возникшие как до, так и после утверждения настоящей Политики.</p>
+			<p>1.4. Требования Политики распространяются на деятельность Университета в целом, обязательны для руководителей и работников структурных подразделений, участвующих в процессе обработки  и защиты персональных данных, а также для контрагентов – физических  и юридических лиц </p>
+			<h5 class="text-center">1. Общие положения</h5>
+			<p>1.1. Политика обработки персональных данных в МГУУ Правительства Москвы (далее – Политика) разработана в соответствии с требованиями Федерального закона от 27 июля 2006 г. № 152-ФЗ «О персональных данных» в целях обеспечения защиты прав и свобод человека  и гражданина при обработке его персональных данных, в том числе защиты прав на неприкосновенность частной жизни, личную  и семейную тайну.</p>
+			<p>1.2. Политика действует в отношении всех персональных данных, которые МГУУ Правительства Москвы (далее – Университет) обрабатывает  как оператор.</p>
+			<p>1.3. Политика распространяется на отношения в области обработки персональных данных возникшие как до, так и после утверждения настоящей Политики.</p>
+			<p>1.4. Требования Политики распространяются на деятельность Университета в целом, обязательны для руководителей и работников структурных подразделений, участвующих в процессе обработки  и защиты персональных данных, а также для контрагентов – физических  и юридических лиц </p>
+			<h5 class="text-center">1. Общие положения</h5>
+			<p>1.1. Политика обработки персональных данных в МГУУ Правительства Москвы (далее – Политика) разработана в соответствии с требованиями Федерального закона от 27 июля 2006 г. № 152-ФЗ «О персональных данных» в целях обеспечения защиты прав и свобод человека  и гражданина при обработке его персональных данных, в том числе защиты прав на неприкосновенность частной жизни, личную  и семейную тайну.</p>
+			<p>1.2. Политика действует в отношении всех персональных данных, которые МГУУ Правительства Москвы (далее – Университет) обрабатывает  как оператор.</p>
+			<p>1.3. Политика распространяется на отношения в области обработки персональных данных возникшие как до, так и после утверждения настоящей Политики.</p>
+			<p>1.4. Требования Политики распространяются на деятельность Университета в целом, обязательны для руководителей и работников структурных подразделений, участвующих в процессе обработки  и защиты персональных данных, а также для контрагентов – физических  и юридических лиц </p>
+		</div>
 	</div>
 </div>
